# Hedge-Risk-Automation-Tool

./: README.md  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
src/: main.py
src/financial_engine/: pricing.py
tests/: test_pricing.py
